--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div id="Top-container">
@@ -13,7 +14,7 @@
         <!--<img src="" alt="">-->
         
         <p id="bio">
-            <h1>Portfolio</h1>
+            <h1 class="heading">Portfolio</h1>
             Hello , I am Abu Talha a
             Programmer and a coder, A Python programmer. <br>
             Currently i am a  7th class student, working towards achieving goals.</p>
@@ -29,17 +30,18 @@
                 <li>✅ Python Programmer working for 2 years</li>
                 <li>✅ Projects making experience for 2 years</li>
                 <li>✅ Worked in Html also</li>
+                <li>✅ Worked in opencv projects.</li>
             </ul>
         </section>
-        <section id="section--page"><h1>Programming languages</h1><span>
-            👉 Python, Html</span></section>
+        <section id="section--page"><h1>Programming languages</h1>
+            👉 Python, Html</section>
         <section id="page">
             <H1>Art</H1>
             👉Logo designer
         </section>
         <section id="page">
             <h1>Projects</h1>
-            You can see it on my gihtub page. 😊
+            You can see it on my gihtub page through above github button. 😊
         </section>
     </div>
 </body>
